# pg-game

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/entity/: CMakeLists.txt
lib/entity/include/game/: entity.hpp
lib/entity/src/: entity.cpp
lib/input/: CMakeLists.txt
lib/input/include/game/: input.hpp
lib/input/src/: input.cpp
lib/log/: CMakeLists.txt
lib/log/include/game/: log.hpp
lib/log/src/: log.cpp
lib/render/: CMakeLists.txt
lib/render/include/game/: render.hpp
lib/render/src/: render.cpp
lib/renderer/: CMakeLists.txt
lib/renderer/include/game/: renderer.hpp
lib/renderer/src/: renderer.cpp
lib/shader/: CMakeLists.txt
lib/shader/include/game/: shader.hpp
lib/shader/src/: shader.cpp
lib/sprite/: CMakeLists.txt
lib/sprite/include/game/: sprite.hpp
lib/state/: CMakeLists.txt
lib/state/include/game/: state.hpp
lib/state/src/: state.cpp
lib/texture/: CMakeLists.txt
lib/texture/include/game/: texture.hpp
lib/texture/src/: texture.cpp
lib/time/: CMakeLists.txt
lib/time/include/game/: time.hpp
lib/types/: CMakeLists.txt
lib/types/include/game/: types.hpp
lib/types/src/: types.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/game/: utils.hpp
lib/utils/src/: utils.cpp
src/: CMakeLists.txt  main.cpp
src/shaders/: background.frag  background.vert  entities.frag  entities.vert  healthbar.frag  healthbar.vert  main.frag  main.vert  text.vert
